--- a/1.1.2 Create Shipment/css/mobile.css
+++ b/1.1.2 Create Shipment/css/mobile.css
@@ -2,7 +2,7 @@
   #nav {
     display: none;
   }
-  body {
+  /* body {
     font-family: "Inter", sans-serif;
     font-weight: 600;
     font-size: 14px;
@@ -46,5 +46,5 @@
     border-width: 3px;
     width: 150px;
     height: 65px;
-  }
+  }*/
 }
