update mobile layout

--- a/1.1.1 Air Cargo/css/nav.css
+++ b/1.1.1 Air Cargo/css/nav.css
@@ -9,7 +9,9 @@ nav {
   font: normal normal normal 14px/1 FontAwesome;
   content: "\f107" !important;
 }
-
+.login-icon {
+  width: 50px;
+}
 .bb {
   border-bottom: solid;
   border-width: 2px;
@@ -45,4 +47,10 @@ nav {
 .nav-item .show::after {
   transform: rotate(-180deg);
   transition: all 0.25s ease-in;
+}
+
+@media (max-width: 576px) {
+  .login-icon {
+    width: 50px;
+  }
 }
