--- a/1.1.1 RJM & JFCC/css/new2.css
+++ b/1.1.1 RJM & JFCC/css/new2.css
@@ -8,8 +8,6 @@ body {
 }
 
 .f24 {
-  font-family: "Inter", sans-serif;
-  font-weight: 600;
   font-size: 24px;
 }
 
@@ -28,6 +26,26 @@ body {
   border-color: white;
   font-size: 21px;
   font-weight: 500px;
+}
+
+.title {
+  font-size: 36px;
+  margin-top: 75px;
+}
+
+.header1 {
+  font-size: 32px;
+  margin-top: 50px;
+  background-color: #ffcc01;
+  color: #d70512;
+  border-radius: 5px;
+}
+
+.header2 {
+}
+
+.f27 {
+  font-size: 27px;
 }
 
 @media (max-width: 400px) {
