--- a/1.1.1 Domestik/css/new2.css
+++ b/1.1.1 Domestik/css/new2.css
@@ -50,6 +50,7 @@ body {
 }
 .card-result {
   border-width: 3px;
+  border-radius: 5px;
   border-color: black;
 }
 .font-result {
@@ -62,6 +63,7 @@ body {
   height: 50px;
   font-size: 24px;
 }
+
 /* MEDIA QUERY*/
 @media (max-width: 576px) {
   .title {
