update mobile layout
update mobile layout international simulation

--- a/1.1.1 RJM & JFCC/css/nav.css
+++ b/1.1.1 RJM & JFCC/css/nav.css
@@ -9,10 +9,19 @@ nav {
   font: normal normal normal 14px/1 FontAwesome;
   content: "\f107" !important;
 }
+.login-icon {
+  width: 50px;
+}
 
 .bb {
   border-bottom: solid;
   border-width: 2px;
+}
+
+@media (max-width: 576px) {
+  .ray-logo {
+    width: 150px;
+  }
 }
 
 /* ANIMATION */
