--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,13 @@
+@media (min-width: 1024px) {
+  body {
+    overflow: hidden;
+  }
+}
+
 body {
   font-family: "Inter", sans-serif;
   font-weight: 600;
+  margin: 0;
   /*overflow: hidden;*/
 }
 /* .container-fluid {
