--- a/css/nav.css
+++ b/css/nav.css
@@ -1,4 +1,4 @@
-#nav2 {
+nav {
   font-family: "Inter", sans-serif;
   font-weight: 600;
   background-color: #383888;
@@ -8,13 +8,21 @@
   font: normal normal normal 14px/1 FontAwesome;
   content: "\f107" !important;
 }
-
+.login-icon {
+  width: 50px;
+}
+.ray-logo {
+  width: 200px;
+}
 .bb {
   border-bottom: solid;
   border-width: 2px;
 }
-.ray-logo {
-  width: 200px;
+
+@media (max-width: 576px) {
+  .ray-logo {
+    width: 150px;
+  }
 }
 
 /* ANIMATION */
