--- a/css/awb_scrollspy.css
+++ b/css/awb_scrollspy.css
@@ -29,13 +29,13 @@ ol {
 }
 
 @media (min-width: 769px) {
-  #nav {
+  #nav2 {
     margin-right: 25px;
   }
 }
 
 @media (min-width: 1600px) {
-  #nav {
+  #nav2 {
     margin-right: 100px !important;
     font-size: 21px;
   }
